--- a/pdfjs/locale/de/viewer.properties
+++ b/pdfjs/locale/de/viewer.properties
@@ -33,12 +33,12 @@ zoom_out_label=Verkleinern
 zoom_in.title=Vergrößern
 zoom_in_label=Vergrößern
 zoom.title=Zoom
-print.title=Drucken
-print_label=Drucken
 presentation_mode.title=In Präsentationsmodus wechseln
 presentation_mode_label=Präsentationsmodus
 open_file.title=Datei öffnen
 open_file_label=Öffnen
+print.title=Drucken
+print_label=Drucken
 download.title=Dokument speichern
 download_label=Speichern
 bookmark.title=Aktuelle Ansicht (zum Kopieren oder Öffnen in einem neuen Fenster)
@@ -120,6 +120,11 @@ document_properties_page_size_dimension_string={{width}} × {{height}} {{unit}} 
 # "{{width}}", "{{height}}", {{unit}}, {{name}}, and {{orientation}} will be replaced by
 # the size, respectively their unit of measurement, name, and orientation, of the (current) page.
 document_properties_page_size_dimension_name_string={{width}} × {{height}} {{unit}} ({{name}}, {{orientation}})
+# LOCALIZATION NOTE (document_properties_linearized): The linearization status of
+# the document; usually called "Fast Web View" in English locales of Adobe software.
+document_properties_linearized=Schnelle Webanzeige:
+document_properties_linearized_yes=Ja
+document_properties_linearized_no=Nein
 document_properties_close=Schließen
 
 print_progress_message=Dokument wird für Drucken vorbereitet…
@@ -160,8 +165,17 @@ find_next.title=Nächstes Vorkommen des Suchbegriffs finden
 find_next_label=Weiter
 find_highlight=Alle hervorheben
 find_match_case_label=Groß-/Kleinschreibung beachten
+find_entire_word_label=Ganze Wörter
 find_reached_top=Anfang des Dokuments erreicht, fahre am Ende fort
 find_reached_bottom=Ende des Dokuments erreicht, fahre am Anfang fort
+# LOCALIZATION NOTE (find_match_count): The supported plural forms are
+# [one|two|few|many|other], with [other] as the default value.
+# "{{current}}" and "{{total}}" will be replaced by a number representing the
+# index of the currently active find result, respectively a number representing
+# the total number of matches in the document.
+# LOCALIZATION NOTE (find_match_count_limit): The supported plural forms are
+# [zero|one|two|few|many|other], with [other] as the default value.
+# "{{limit}}" will be replaced by a numerical value.
 find_not_found=Suchbegriff nicht gefunden
 
 # Error panel labels
