--- a/pdfjs/locale/it/viewer.properties
+++ b/pdfjs/locale/it/viewer.properties
@@ -48,8 +48,6 @@ scroll_horizontal.title = Scorri le pagine in orizzontale
 scroll_horizontal_label = Scorrimento orizzontale
 scroll_wrapped.title = Scorri le pagine in verticale, disponendole da sinistra a destra e andando a capo automaticamente
 scroll_wrapped_label = Scorrimento con a capo automatico
-book_flip.title = Sfoglia le pagine come un libro
-book_flip_label = Sfoglia libro
 spread_none.title = Non raggruppare pagine
 spread_none_label = Nessun raggruppamento
 spread_odd.title = Crea gruppi di pagine che iniziano con numeri di pagina dispari
@@ -94,7 +92,7 @@ print_progress_close = Annulla
 toggle_sidebar.title = Attiva/disattiva barra laterale
 toggle_sidebar_notification.title = Attiva/disattiva barra laterale (il documento contiene struttura/allegati)
 toggle_sidebar_label = Attiva/disattiva barra laterale
-document_outline.title = Visualizza la struttura del documento (doppio clic per visualizzare/nascondere tutti gli elementi)
+document_outline.title = Visualizza la struttura del documento (doppio clic per visualizzare/comprimere tutti gli elementi)
 document_outline_label = Struttura documento
 attachments.title = Visualizza allegati
 attachments_label = Allegati
